# agent-graph

./: .gitignore  README.md  demo_basestate.py  demo_both_patterns.py  demo_conditions.py  demo_new_api.py  demo_start_end_nodes.py  demo_visualization.py  example.py  example_simple.py  main.py  pyproject.toml  pyrightconfig.json  tasks.md  test_function_passing.py  working_example.py
src/agentgraph/: __init__.py  _types.py  conditions.py  graph.py  node.py  state.py
