[project]
name = "agent-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = []

[dependency-groups]
dev = [
    "poethepoet>=0.35.0",
    "pyright>=1.1.401",
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 88

[tool.uv]

[tool.poe.tasks]
lint      = { cmd = "ruff check ." }

format    = [
  { cmd = "ruff check --select I --fix ." },
  { cmd = "ruff format ." }
]

typecheck = { cmd = "pyright" }
check     = ["format", "lint", "typecheck"]
